AUT-1690 Perform Pääsuke request when representation requested